--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 							</ul>
 
 							<ul class="nav navbar-nav navbar-right" data-filter-group="aboutUs">
-								<li><a href ="Main.html">HOME</a></li>
+								<li><a href ="">HOME</a></li>
 								<li><a class="navbutton aboutUs" data-filter=".aboutUs">ABOUT US</a></li>
 								<li><a href="https://www.facebook.com/"><img class="logo" src ="assets/icon-fb.png"></a></li>
 								<li><a href="https://twitter.com/"><img class="logo" src="assets/icon-tw.png"></a></li>
@@ -56,7 +56,16 @@
 					<div class="col-md-2">
 					    <div class="sidebar-nav">
 					      <div class="navbar navbar-default" role="navigation">
-					        <div class="collapse sidebar-navbar-collapse navbar-collapse">
+
+					      							<!---display toggle when collapse-->
+						<button class = "navbar-toggle" data-toggle = "collapse" data-target = ".sidebarheadercollapse">
+	                                        <span class = "icon-bar"></span>
+	                                        <span class = "icon-bar"></span>
+	                                        <span class = "icon-bar"></span>
+	                    </button>
+						<!---toggle-Michael-->	
+
+					        <div class="collapse sidebar-navbar-collapse navbar-collapse sidebarheadercollapse">
 					          <ul class="navButtonParent nav navbar-nav" data-filter-group="people">
 					            <li class="active"><a class="navbutton all" data-filter="">ALL</a></li>
 					            <li><a class="navbutton youth" data-filter=".youth">YOUTH</a></li>
