--- a/index.html
+++ b/index.html
@@ -79,22 +79,137 @@
 				  <!--main content-->
 				  	<div class="col-md-8">
 						<div class="iso">
-							<a class="fancybox" rel="group" href="assets/1.png"><div class="infographics finance youth project-thumbnail"><img src="assets/1.png"/></div></a>
-							<a class="fancybox" rel="group" href="assets/2.png"><div class="infographics education youth project-thumbnail"><img src="assets/2.png"/></div></a>
-							<a class="fancybox" rel="group" href="assets/3.png"><div class="infographics technology youth project-thumbnail"><img src="assets/3.png"/></div></a>
-							<a class="fancybox" rel="group" href="assets/4.png"><div class="infographics instructables youth project-thumbnail"><img src="assets/4.png"/></div></a>
-							<a class="fancybox" rel="group" href="assets/0.png"><div class="infographics finance student project-thumbnail"><img src="assets/0.png"/></div></a>
-							<a class="fancybox" rel="group" href="assets/1.png"><div class="infographics education student project-thumbnail"><img src="assets/1.png"/></div></a>
-							<a class="fancybox" rel="group" href="assets/2.png"><div class="infographics technology student project-thumbnail"><img src="assets/2.png"/></div></a>
-							<a class="fancybox" rel="group" href="assets/3.png"><div class="infographics instructables student project-thumbnail"><img src="assets/3.png"/></div></a>
-							<a class="fancybox" rel="group" href="assets/0.png"><div class="infographics aboutUs project-thumbnail"><img src="assets/0.png"/></div></a>
+
+						<div class="infographics finance youth flip-container" ontouchstart="this.classList.toggle('hover');">
+							<div class="flipper">
+								<div class="front">
+									<a class="fancybox" rel="group" href="assets/1.png"><div class="project-thumbnail"><img src="assets/1.png"/></div></a>
+								</div>
+
+								<div class="back">
+									<div><p id="test">test test test test test</p></div>
+								</div>
+							</div>
 						</div>
+
+						<div class="infographics finance youth flip-container" ontouchstart="this.classList.toggle('hover');">
+							<div class="flipper">
+								<div class="front">
+									<a class="fancybox" rel="group" href="assets/1.png"><div class="project-thumbnail"><img src="assets/1.png"/></div></a>
+								</div>
+
+								<div class="back">
+									<div><p id="test">test test test test test</p></div>
+								</div>
+							</div>
+						</div>
+
+						<div class="infographics education youth flip-container" ontouchstart="this.classList.toggle('hover');">
+							<div class="flipper">
+								<div class="front">
+									<a class="fancybox" rel="group" href="assets/2.png"><div class="project-thumbnail"><img src="assets/2.png"/></div></a>
+								</div>
+
+								<div class="back">
+									<div><p id="test">test test test test test</p></div>
+								</div>
+							</div>
+						</div>
+
+						<div class="infographics technology youth flip-container" ontouchstart="this.classList.toggle('hover');">
+							<div class="flipper">
+								<div class="front">
+									<a class="fancybox" rel="group" href="assets/3.png"><div class="project-thumbnail"><img src="assets/3.png"/></div></a>
+								</div>
+
+								<div class="back">
+									<div><p id="test">test test test test test</p></div>
+								</div>
+							</div>
+						</div>
+
+						<div class="infographics instructables youth flip-container" ontouchstart="this.classList.toggle('hover');">
+							<div class="flipper">
+								<div class="front">
+									<a class="fancybox" rel="group" href="assets/4.png"><div class="project-thumbnail"><img src="assets/4.png"/></div></a>
+								</div>
+
+								<div class="back">
+									<div><p id="test">test test test test test</p></div>
+								</div>
+							</div>
+						</div>
+
+						<div class="infographics finance student flip-container" ontouchstart="this.classList.toggle('hover');">
+							<div class="flipper">
+								<div class="front">
+									<a class="fancybox" rel="group" href="assets/0.png"><div class="project-thumbnail"><img src="assets/0.png"/></div></a>
+								</div>
+
+								<div class="back">
+									<div><p id="test">test test test test test</p></div>
+								</div>
+							</div>
+						</div>
+
+						<div class="infographics education student flip-container" ontouchstart="this.classList.toggle('hover');">
+							<div class="flipper">
+								<div class="front">
+									<a class="fancybox" rel="group" href="assets/1.png"><div class="project-thumbnail"><img src="assets/1.png"/></div></a>
+								</div>
+
+								<div class="back">
+									<div><p id="test">test test test test test</p></div>
+								</div>
+							</div>
+						</div>
+
+						<div class="infographics technology student flip-container" ontouchstart="this.classList.toggle('hover');">
+							<div class="flipper">
+								<div class="front">
+									<a class="fancybox" rel="group" href="assets/2.png"><div class="project-thumbnail"><img src="assets/2.png"/></div></a>
+								</div>
+
+								<div class="back">
+									<div><p id="test">test test test test test</p></div>
+								</div>
+							</div>
+						</div>
+
+						<div class="infographics instructables student flip-container" ontouchstart="this.classList.toggle('hover');">
+							<div class="flipper">
+								<div class="front">
+									<a class="fancybox" rel="group" href="assets/3.png"><div class="project-thumbnail"><img src="assets/3.png"/></div></a>
+								</div>
+
+								<div class="back">
+									<div><p id="test">test test test test test</p></div>
+								</div>
+							</div>
+						</div>
+
+						<div class="infographics aboutUs flip-container" ontouchstart="this.classList.toggle('hover');">
+							<div class="flipper">
+								<div class="front">
+									<a class="fancybox" rel="group" href="assets/0.png"><div class="project-thumbnail"><img src="assets/0.png"/></div></a>
+								</div>
+
+								<div class="back">
+									<div><p id="test">test test test test test</p></div>
+								</div>
+							</div>
+						</div>
+
+
+
+						</div><!--/.iso-->
 	  			  	</div>
 	  			</div>
 			</div> 
 
 		</body>
 	</div>
+
 
 		<!--footer-->
 	<footer class="bs-docs-footer">
