--- a/index.html
+++ b/index.html
@@ -95,11 +95,11 @@
 						<div class="infographics finance youth flip-container" ontouchstart="this.classList.toggle('hover');">
 							<div class="flipper">
 								<div class="front">
-									<a class="fancybox" rel="group" href="assets/1.png"><div class="project-thumbnail"><img src="assets/1.png"/></div></a>
+									<div class="project-thumbnail"><img src="assets/1.png"/></div>
 								</div>
 
-								<div class="back mybox">
-									<div><p id="test">test test test test test</p></div>
+								<div class="back" id="test">
+									<a class="fancybox" rel="group" href="assets/1.png">Buying a Car</a>
 								</div>
 							</div>
 						</div>
@@ -107,11 +107,11 @@
 						<div class="infographics education youth flip-container" ontouchstart="this.classList.toggle('hover');">
 							<div class="flipper">
 								<div class="front">
-									<a class="fancybox" rel="group" href="assets/2.png"><div class="project-thumbnail"><img src="assets/2.png"/></div></a>
+									<div class="project-thumbnail"><img src="assets/1.png"/></div>
 								</div>
 
-								<div class="back">
-									<div><p id="test">test test test test test</p></div>
+								<div class="back" id="test">
+									<a class="fancybox" rel="group" href="assets/1.png">Buying a Car</a>
 								</div>
 							</div>
 						</div>
@@ -119,11 +119,11 @@
 						<div class="infographics technology youth flip-container" ontouchstart="this.classList.toggle('hover');">
 							<div class="flipper">
 								<div class="front">
-									<a class="fancybox" rel="group" href="assets/3.png"><div class="project-thumbnail"><img src="assets/3.png"/></div></a>
+									<div class="project-thumbnail"><img src="assets/1.png"/></div>
 								</div>
 
-								<div class="back">
-									<div><p id="test">test test test test test</p></div>
+								<div class="back" id="test">
+									<a class="fancybox" rel="group" href="assets/1.png">Buying a Car</a>
 								</div>
 							</div>
 						</div>
@@ -131,11 +131,11 @@
 						<div class="infographics instructables youth flip-container" ontouchstart="this.classList.toggle('hover');">
 							<div class="flipper">
 								<div class="front">
-									<a class="fancybox" rel="group" href="assets/4.png"><div class="project-thumbnail"><img src="assets/4.png"/></div></a>
+									<div class="project-thumbnail"><img src="assets/1.png"/></div>
 								</div>
 
-								<div class="back">
-									<div><p id="test">test test test test test</p></div>
+								<div class="back" id="test">
+									<a class="fancybox" rel="group" href="assets/1.png">Buying a Car</a>
 								</div>
 							</div>
 						</div>
@@ -143,11 +143,11 @@
 						<div class="infographics finance student flip-container" ontouchstart="this.classList.toggle('hover');">
 							<div class="flipper">
 								<div class="front">
-									<a class="fancybox" rel="group" href="assets/0.png"><div class="project-thumbnail"><img src="assets/0.png"/></div></a>
+									<div class="project-thumbnail"><img src="assets/1.png"/></div>
 								</div>
 
-								<div class="back">
-									<div><p id="test">test test test test test</p></div>
+								<div class="back" id="test">
+									<a class="fancybox" rel="group" href="assets/1.png">Buying a Car</a>
 								</div>
 							</div>
 						</div>
@@ -155,11 +155,11 @@
 						<div class="infographics education student flip-container" ontouchstart="this.classList.toggle('hover');">
 							<div class="flipper">
 								<div class="front">
-									<a class="fancybox" rel="group" href="assets/1.png"><div class="project-thumbnail"><img src="assets/1.png"/></div></a>
+									<div class="project-thumbnail"><img src="assets/1.png"/></div>
 								</div>
 
-								<div class="back">
-									<div><p id="test">test test test test test</p></div>
+								<div class="back" id="test">
+									<a class="fancybox" rel="group" href="assets/1.png">Buying a Car</a>
 								</div>
 							</div>
 						</div>
@@ -167,11 +167,11 @@
 						<div class="infographics technology student flip-container" ontouchstart="this.classList.toggle('hover');">
 							<div class="flipper">
 								<div class="front">
-									<a class="fancybox" rel="group" href="assets/2.png"><div class="project-thumbnail"><img src="assets/2.png"/></div></a>
+									<div class="project-thumbnail"><img src="assets/1.png"/></div>
 								</div>
 
-								<div class="back">
-									<div><p id="test">test test test test test</p></div>
+								<div class="back" id="test">
+									<a class="fancybox" rel="group" href="assets/1.png">Buying a Car</a>
 								</div>
 							</div>
 						</div>
@@ -179,11 +179,11 @@
 						<div class="infographics instructables student flip-container" ontouchstart="this.classList.toggle('hover');">
 							<div class="flipper">
 								<div class="front">
-									<a class="fancybox" rel="group" href="assets/3.png"><div class="project-thumbnail"><img src="assets/3.png"/></div></a>
+									<div class="project-thumbnail"><img src="assets/1.png"/></div>
 								</div>
 
-								<div class="back">
-									<div><p id="test">test test test test test</p></div>
+								<div class="back" id="test">
+									<a class="fancybox" rel="group" href="assets/1.png">Buying a Car</a>
 								</div>
 							</div>
 						</div>
@@ -191,16 +191,14 @@
 						<div class="infographics aboutUs flip-container" ontouchstart="this.classList.toggle('hover');">
 							<div class="flipper">
 								<div class="front">
-									<a class="fancybox" rel="group" href="assets/0.png"><div class="project-thumbnail"><img src="assets/0.png"/></div></a>
+									<div class="project-thumbnail"><img src="assets/1.png"/></div>
 								</div>
 
-								<div class="back">
-									<div><p id="test">test test test test test</p></div>
+								<div class="back" id="test">
+									<a class="fancybox" rel="group" href="assets/1.png">Buying a Car</a>
 								</div>
 							</div>
 						</div>
-
-
 
 						</div><!--/.iso-->
 	  			  	</div>
