--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<head>
 		<!--meta-->
 		<meta charset="utf-8">
-		<link rel="shortcut icon" href="assets/favicon.png"/>
+		<link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon"/>
 
 		<title>UTOPLE | Inside Tips Summarized</title>
 
